# blueprint-blue

./: Blueprint-Blue.sln  README.md
Blueprint-Blue/: App.xaml  App.xaml.cs  Blueprint-Blue-App.csproj  BlueprintSVC.cs  MainWindow.xaml  MainWindow.xaml.cs
Blueprint-Blue-Lib/: Blueprint-Blue-Lib.csproj  Blueprint-Blue-Lib.sln  Blueprint.cs  ExpandableHistory.cs  ExpandableInvocation.cs  ExpandableMacro.cs  FiveBitEncoding.cs  PinshotLib.cs  PinshotSvc.cs  QExpandableStatement.cs  QHistory.cs  avx_search.fbs  avx_search_generated.h  blueprint.fbs  blueprint_blue.fbs  blueprint_blue_generated.h  blueprint_reply.fbs  blueprint_reply_generated.h  blueprint_request.fbs  blueprint_request_generated.h
Blueprint-Blue-Lib/AVX/: AVXRender.cs  AVXSearch.cs
Blueprint-Blue-Lib/FuzzyLex/: BlueprintLex.cs
Blueprint-Blue-Lib/Help/: QHelpDoc.cs
Blueprint-Blue-Lib/Model/: Blueprint.cs  QCommand.cs  QContext.cs  QEnvironment.cs  QID.cs  QSettings.cs  QStatement.cs
Blueprint-Blue-Lib/Model/Directive/: ExportDirective.cs  ExportHtml.cs  ExportJson.cs  ExportMarkdown.cs  ExportText.cs  ExportYaml.cs  MacroDirective.cs
Blueprint-Blue-Lib/Model/Explicit/: QAbsorb.cs  QBulk.cs  QBulkHistory.cs  QExit.cs  (+19 more)
Blueprint-Blue-Lib/PEG/: Grammar.cs  Parsed.cs
Blueprint-Blue-SVC/: Blueprint-Blue-SVC.csproj
Blueprint-Blue-Test/: Blueprint-Blue-Test.csproj  BlueprintTests.cs
Blueprint-Blue-gRPC/: Blueprint-Blue-gRPC.csproj  BlueprintBlue.cs  BlueprintBlueServiceLoop.cs  Interface.cs  PinshotSvc.cs  avx_search.fbs  blueprint_blue.fbs
Blueprint-Blue-gRPC-old/: Blueprint-Blue-gRPC.csproj
Blueprint-Blue-gRPC/Help/: QHelpDoc.cs
Blueprint-Blue-gRPC/Model/: Blueprint.cs  QCommand.cs  QSettings.cs
Blueprint-Blue-gRPC/PEG/: Grammar.cs
Blueprint-Blue-gRPC/Properties/: launchSettings.json
BlueprintConsoleApp/: BlueprintConsoleApp.csproj  Program.cs
blueprint-blue/: Blueprint.cs  Program.cs
grpc/rust/blueprint-grpc/: Cargo.toml  build.rs
grpc/rust/blueprint-grpc/proto/: blueprint.proto
grpc/rust/blueprint-grpc/src/: avx-quelle.pest  blueprint.rs  client.rs  server.rs
grpc/rust/blueprint-grpc/src/api/proto/: blueprint.proto
grpc/rust/blueprint-grpc/src/client/: Cargo.toml
grpc/rust/blueprint-grpc/src/client/src/: main.rs
grpc/rust/blueprint-grpc/src/server/: Cargo.toml  build.rs
grpc/rust/blueprint-grpc/src/server/src/: main.rs
(+74 files in other folders)
